--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".UpdateInfoActivity"></activity>
+        <activity android:name=".RegisterActivity" />
         <activity android:name=".ResetPasswordActivity" />
         <activity android:name=".AccessActivity" />
         <activity android:name=".MainActivity">
