--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
         <activity android:name=".RegisterActivity" />
         <activity android:name=".ResetPasswordActivity" />
         <activity android:name=".AccessActivity" />
+        <activity android:name=".CalendarMainActivity" />
+        <activity android:name=".DoctorsMainActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
