--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     //Conexión DB
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.firebase:firebase-database:19.2.1'
+    implementation 'com.google.firebase:firebase-storage:19.1.0'  //Base de Archivos
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -41,5 +42,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+    implementation 'de.hdodenhof:circleimageview:1.3.0' //Imagen Circular
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'//Recortar Imagen Descargar Imagen
 }
