--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.health">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".UploadHistory"></activity>
+        <activity android:name=".MaintenanceActivity"></activity>
+        <activity android:name=".UploadHistory" />
         <activity android:name=".MainHisory" />
         <activity android:name=".HystoryAcces" />
         <activity android:name=".UpdateInfoActivity" />
@@ -21,11 +22,14 @@
         <activity android:name=".AccessActivity" />
         <activity android:name=".CalendarMainActivity" />
         <activity android:name=".DoctorsMainActivity" />
-        <activity android:name=".AddInvent"
+        <activity
+            android:name=".AddInvent"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <activity android:name=".AddInventory"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
-        <activity android:name=".DeleteInventory"
+        <activity
+            android:name=".AddInventory"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity
+            android:name=".DeleteInventory"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -34,7 +38,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PdfActivity"
+        <activity
+            android:name=".PdfActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
     </application>
 
