--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+
+    implementation 'de.hdodenhof:circleimageview:1.3.0' //Imagen Circular
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'//Recortar Imagen Descargar Imagen
 }
